--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
     "js": "^0.1.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.10.0",
     "react-chartjs-2": "^5.2.0",
